2008-8-11 Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/include/os/all.h: added RateThread.h

2008-07-28  Lorenzo Natale <nat@liralab.it>
	* src/yarp/libYARP_dev/include/yarp/dev/DataSource.h: 
	removed IPreciselyTimed interface
	* src/yarp/libYARP_dev/include/yarp/dev/PreciselyTimed.h:
	added IPreciselyTimedInterface
	* src/yarp/libYARP_dev/include/yarp/dev/ServerInertial.h
	* src/yarp/libYARP_dev/src/ServerInertial.cpp: added timestamps in
	server inertial device.

2008-07-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: "yarp exists" now works
	also with two arguments.  With two arguments, it tests if 
	a connection exists between the two ports.  With one argument,
	it does as always (checks if port exists)

	* src/libYARP_OS/src/Network.cpp: implement test for whether
	a connection exists between two ports.

2008-07-28  Giacomo Spigler  <spiglerg@gmail.com>

	* src/modules/cuda/*: Now CUDA driver requires two variables to 
	be set with ccmake:
	-CUDA_NUMTHREADS: the number of threads per block to be run on the GPU
	-CUDA_NUMTHREADBLOCKS: the number of thread blocks to be run on the GPU
	With this new format the driver can be tuned for better performance on 
	every CUDA compatible GPU 
	[http://www.nvidia.com/object/cuda_learn_products.html].

2008-07-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: updated Bottle/BottleImpl
	to cache its binary representation before port communication
	starts.  Removed semaphore that was previously needed to
	control write access to this cache.

	* src/libYARP_OS/include/yarp/os/PortWriter.h: added onCommencement
	method that is called just before an object is sent from a 
	Port to its zero, one, or several recipients.  This is a useful
	hook for finalizing the representation of the object, since its
	user has passed control of it to YARP and we know they will
	not be touching it again.

2008-06-18 Alessandro Scalzo <alessandro@liralab.it>